--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-redux": "^8.1.2",
+		"swiper": "^10.2.0",
 		"tailwindcss": "3.3.3",
 		"typescript": "5.1.6"
 	}
